k8s/apps/base/n8n/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
  selector:
    app: n8n
